stylesheets/stylesheet.css
body {
	/*background-image: url("../images/newyork.png");*/
	/*background-image: url("../images/white-wall.png");*/
	/*background-color: #333333;*/
}
h3 {
	text-align: center;
}


.divider {
	background-color: black;
}

.topnav {
	width: 100%;
}

.nav li a {
	color: black;
	
}
.navbar-home {
	float: left;
	height: 50px;
	padding: 15px 15px;
	line-height: 20px;
	font-size: 2em;
	border: 1px solid red;
}

#nav  {
	border: 1px solid black;
	
}

.navbar-brand {
	font-size: 1.5em;
}

.navbar-nav li a {
	font-size: 1.5em;

}

@media (max-width: 300px) {
	ul.sites > li {
		display: block;
		padding: 0;
		margin-bottom: 20px;
	}
}
.wallpaper {
	background-size: cover;	
	background-image: url("../images/intro-photo-1.jpg");
	background-repeat: no-repeat;
	background-attachment: center;
	background-position: center;
	text-align: center;
	
}

@media (max-width: 400px) {
	.wallpaper {

		border: 1px solid green;
		background-position: right 35% bottom 0px;

	}
}
/* Source: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Images/Using_CSS_gradients*/

@media (max-width: 400px) {
	.gradient {
		/*The old syntax, deprecated and prefixed, for old browsers*/
		background-image: -moz-linear-gradient(hsla(0, 0%, 100%, 0.3), #fcc600), url("../images/intro-photo-1.jpg");
		background-image: -webkit-linear-gradient(hsla(0, 0%, 100%, 0.3), #fcc600), url("../images/intro-photo-1.jpg");

		/*The new syntax needed by standard-compliant browsers (Opera 12.1,
		 IE 10, Firefox 16, Chrome 26, Safari 6.1), without prefix*/
		background-image: linear-gradient(hsla(0, 0%, 100%, 0.3), #fcc600), url("../images/intro-photo-1.jpg") ;

	}	
}
/* #home h1 h4 h2 {
	position: absolute;
	top: 50%;
	left:50%;
	transform: translate(-50%,-50%);
}
 */


.welcome {
	padding-top: 30%;
	padding-bottom:30%;
	align-items: center;
	justify-content: center;
	font-family: Arial;
	font-weight: bold;
	color: black;
}

@media (max-width: 400px) {
	.welcome {
	padding-bottom:20%;
	}
}

.welcome h1 {
	font-size: 6em;
}

.welcome p {
	font-size: 3em;
}

.welcome h2 {
	font-size: 4em;
}

.btn {
	background-color: black;
	color: white;
	border-style: none;
}
.project-center {
	text-align: center;
}
.name {
	text-align: center;
}
#project {
	
}
#projects h1 {
	font-size: 3em;
}

#project h3 {
	text-align: center;
}
.project-intro {
	font-size: 2em;
	padding-top: 2%;
	padding-bottom: 2%;
}

.profile-img {
	text-align: center;
	margin-left: auto;
	margin-right: auto;
}



#about h1 {
	font-szie: 3em;
}
.my-ul li {
	font-size: 18px;
	text-align: center;
	list-style-type: none;
	display: block;
}

.centered {
	display: -webkit-flexbox;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
    justify-content: center;
	text-align: center;
	display: flex;
	align-items: center;
	justify-content: center;
}

.jumbotron {
	/*background-image: url("../images/white-wall.png");*/
	background-color: transparent;
}

.frame-container {
	background: transparent;
}

.my-photo {
	border-radius: 50%;
	display: block;
	margin: auto;
}

.casual-overlay {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	overflow: hidden;
	width: 100%;
	height:0;
	transition: .5s ease;	
}

/*when hovered, the bottom of the image is 0px away from the parent container, flip. 
The height increases to 100%*/
.flip:hover .casual-overlay{	

	bottom: 0;
	height: 100%;	
}

/* From tutorial https://tympanus.net/codrops/2011/11/02/original-hover-effects-with-css3/*/
/* and website https://tympanus.net/Tutorials/OriginalHoverEffects/*/
.view-first img {
	-webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
   -o-transition: all 0.2s linear;
   -ms-transition: all 0.2s linear;
   transition: all 0.2s linear;
}
.view-first .mask {
	text-align: center;
   -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
   opacity: 0;
   background-color: rgba(255,255,255, 0.9);
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
}
.view-first h3 {
   -webkit-transform: translateY(-100px);
   -moz-transform: translateY(-100px);
   -o-transform: translateY(-100px);
   -ms-transform: translateY(-100px);
   transform: translateY(-100px);
   -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
   opacity: 0;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   -ms-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
}
.view-first p {
   -webkit-transform: translateY(100px);
   -moz-transform: translateY(100px);
   -o-transform: translateY(100px);
   -ms-transform: translateY(100px);
   transform: translateY(100px);
   -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
   opacity: 0;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
   -o-transition: all 0.2s linear;
   -ms-transition: all 0.2s linear;
   transition: all 0.2s linear;
}
.view-first:hover img {
   -webkit-transform: scale(1.1,1.1);
   -moz-transform: scale(1.1,1.1);
   -o-transform: scale(1.1,1.1);
   -ms-transform: scale(1.1,1.1);
   transform: scale(1.1,1.1);
}
.view-first a.info {
   -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
   opacity: 0;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   -ms-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
}
.view-first:hover .mask {
   -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
   filter: alpha(opacity=100);
   opacity: 1;
}
.view-first:hover h3,
.view-first:hover p,
.view-first:hover a.info {
   -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
   filter: alpha(opacity=100);
   opacity: 1;
   -webkit-transform: translateY(0px);
   -moz-transform: translateY(0px);
   -o-transform: translateY(0px);
   -ms-transform: translateY(0px);
   transform: translateY(0px);
}
.view-first:hover p {
   -webkit-transition-delay: 0.1s;
   -moz-transition-delay: 0.1s;
   -o-transition-delay: 0.1s;
   -ms-transition-delay: 0.1s;
   transition-delay: 0.1s;
}
.view-first:hover a.info {
   -webkit-transition-delay: 0.2s;
   -moz-transition-delay: 0.2s;
   -o-transition-delay: 0.2s;
   -ms-transition-delay: 0.2s;
   transition-delay: 0.2s;
}

.view {
	overflow: hidden;
}

.view .mask {
	position: absolute;
	overflow: hidden;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;	
}

.view a.info {
	font-size: 15px;
   display: inline-block;
   text-decoration: none;
   padding: 5px 10px;
   background: #000;
   color: #fff;
   text-transform: uppercase;
   -webkit-box-shadow: 0 0 1px #000;
   -moz-box-shadow: 0 0 1px #000;
   box-shadow: 0 0 1px #000;
}
.view a.info: hover {
   -webkit-box-shadow: 0 0 5px #000;
   -moz-box-shadow: 0 0 5px #000;
   box-shadow: 0 0 5px #000;
}

.view h3 {
	color: white;
	display: inline-block;
   text-transform: uppercase;
   text-align: center;
   position: relative;
   font-size: 15px;
   padding: 10px;
   background: rgba(0, 0, 0, 0.8);
   margin: 20px 0 0 0;
}
.view p {
   font-size: 22px;
   position: relative;
   padding: 10px 10px 20px;
   text-align: center;
}
	

